hphp/hack/test/typecheck/attributes/global_constant_attribute.php.exp
File "global_constant_attribute.php", line 3, characters 19-30:
User-defined constants are not allowed in user attribute expressions (Parsing[1002])
